--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:src="@drawable/defecto"
         android:id="@+id/picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
