Imagen sin conexión

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="sd.energytest.Activities.MainActivity"
     tools:showIn="@layout/app_bar_main">
-
+    <ImageView
+        android:id="@+id/sinconexion"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:src="@drawable/sin_conexion"/>
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
